--- a/Portfolio/src/app/app.component.html
+++ b/Portfolio/src/app/app.component.html
@@ -11,20 +11,23 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Sobre mí</a>
+    <a class="navbar-brand" href="#" routerLinkActive="activo" routerLink="SobreMi">Sobre mí</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Estudios</a>
+          <a class="nav-link active" aria-current="page" routerLinkActive="activo" href="#">Estudios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Experiencia</a>
+          <a class="nav-link" routerLinkActive="activo" href="#">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Trabajos</a>
+          <a class="nav-link" routerLinkActive="activo" href="#">Trabajos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="activo" href="#" routerLink="/">Inicio</a>
         </li>
        </ul>
     </div>
