--- a/Portfolio/src/app/app.component.html
+++ b/Portfolio/src/app/app.component.html
@@ -1,44 +1,2 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#" routerLinkActive="activo" routerLink="SobreMi">Sobre mí</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLinkActive="activo" href="#">Estudios</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="activo" href="#">Experiencia</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="activo" href="#">Trabajos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLinkActive="activo" href="#" routerLink="/">Inicio</a>
-        </li>
-       </ul>
-    </div>
-  </div>
-</nav>
-<div class="cv d-flex p-2 d-flex justify-content-center d-flex align-items-up">
-  Teresa Torres
-</div>
-<div justify-content-end align-items-center>
-  Foto de Erik Eastman en Unsplash
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
-</html>
+<app-navegador></app-navegador>
+<router-outlet></router-outlet>
